--- a/data/master_analysis.Rmd
+++ b/data/master_analysis.Rmd
@@ -243,13 +243,13 @@ print(character_eval_combined_stats)  # View summarized data
 character_eval_combined_long <- character_eval_combined %>%
   pivot_longer(
     cols = c(quick_justin_score, slow_nate_score), # Select the new columns
-    names_to = "person",                           # Create a column for person
+    names_to = "speed",                           # Create a column for speed
     values_to = "score"                            # Create a column for scores
   ) %>%
   mutate(
-    person = ifelse(person == "quick_justin_score", "Justin", "Nate") # Relabel person column
+    speed = ifelse(speed == "quick_justin_score", "Justin", "Nate") # Relabel speed column
   )  %>%
-  select(Participant_ID, condition, person, score) # Keep only essential columns
+  select(Participant_ID, condition, speed, score) # Keep only essential columns
 
 
 # View the reshaped data
@@ -259,7 +259,7 @@ head(character_eval_combined_long)
 ### Step 4: Run Repeated-Measures ANOVA
 
 ```{r}
-anova_combined <- aov(score ~ condition * person + Error(Participant_ID/person), data = character_eval_combined_long)
+anova_combined <- aov(score ~ condition * speed + Error(Participant_ID/speed), data = character_eval_combined_long)
 
 # View the summary
 summary(anova_combined)
@@ -269,7 +269,7 @@ summary(anova_combined)
 
 ```{r}
 # Conduct post hoc pairwise comparisons using estimated marginal means
-posthoc_results <- emmeans(anova_combined, pairwise ~ condition * person)
+posthoc_results <- emmeans(anova_combined, pairwise ~ condition * speed)
 
 print(posthoc_results)
 
@@ -280,7 +280,7 @@ print(posthoc_results)
 ```{r}
 # Refit the repeated measures model
 anova_combined_lmer <- lmer(
-  score ~ condition * person + (1 | Participant_ID),
+  score ~ condition * speed + (1 | Participant_ID),
   data = character_eval_combined_long
 )
 
@@ -298,7 +298,7 @@ print(eta2_combined)
 ```{r}
 
 # Updated plot with detailed y-axis tweaks
-ggplot(character_eval_combined_long, aes(x = person, y = score, fill = person)) +
+ggplot(character_eval_combined_long, aes(x = speed, y = score, fill = speed)) +
   geom_bar(
     stat = "summary",
     fun = "mean",
@@ -336,6 +336,65 @@ ggplot(character_eval_combined_long, aes(x = person, y = score, fill = person)) 
     expand = c(0, 0)   # No extra space above/below
   )
 
+
+```
+
+
+```{r}
+
+# Step 1: Summarize the data to get means for each speed and condition
+line_data <- character_eval_combined_long %>%
+  group_by(speed, condition) %>%
+  summarize(mean_score = mean(score), .groups = "drop")
+
+# Step 2: Plot with connecting lines and tweaks
+ggplot(character_eval_combined_long, aes(x = condition, y = score, fill = speed)) +
+  # Bar plot for the data
+  geom_bar(
+    stat = "summary",
+    fun = "mean",
+    position = position_dodge(width = 0.8),  # Columns closer together
+    width = 0.6                             # Narrower columns
+  ) +
+  # Add lines connecting the means
+  geom_line(
+    data = line_data,
+    aes(x = as.numeric(as.factor(condition)) + ifelse(speed == "Justin", -0.2, 0.2), 
+        y = mean_score, group = speed),
+    size = 1.3,  # Line thickness
+    color = "darkblue"
+  ) +
+  # Add dots at the ends of the lines, centered with the bars
+  geom_point(
+    data = line_data,
+    aes(x = as.numeric(as.factor(condition)) + ifelse(speed == "Justin", -0.2, 0.2), 
+        y = mean_score),
+    size = 3,
+    color = "darkblue"
+  ) +
+  labs(
+    title = "Moral Character Evaluations Combined Data",
+    x = "Condition",
+    y = "Mean Score (Likert Scale)",  # Y-axis label with clarification
+    fill = "Decision Speed"
+  ) +
+  scale_fill_manual(
+    values = c("Justin" = "#4F81BD", "Nate" = "#9DC3E6"),  # Keep column colors the same
+    labels = c("Justin" = "Quick (Justin)", "Nate" = "Slow (Nate)")  # Custom legend labels
+  ) +
+  theme_minimal() +
+  theme(
+    text = element_text(size = 12),
+    plot.title = element_text(hjust = 0.5, face = "bold", size = 14),  # Centered title
+    axis.text.x = element_text(size = 10),
+    axis.title.y = element_text(margin = margin(r = 15)),  # Add spacing to y-axis label
+    legend.position = "none"  # Remove the legend for speed (lines)
+  ) +
+  scale_y_continuous(
+    limits = c(0, 7),  # Y-axis limits for Likert scale
+    breaks = 1:7,      # Label y-axis by 1's
+    expand = c(0, 0)   # No extra space above/below
+  )
 
 ```
 
@@ -393,13 +452,13 @@ print(character_eval_combined_stats)  # View summarized data
 character_eval_group3_long <- character_eval_group3 %>%
   pivot_longer(
     cols = c(quick_justin_score, slow_nate_score), # Select the new columns
-    names_to = "person",                           # Create a column for person
+    names_to = "speed",                           # Create a column for speed
     values_to = "score"                            # Create a column for scores
   ) %>%
   mutate(
-    person = ifelse(person == "quick_justin_score", "Justin", "Nate") # Relabel person column
+    speed = ifelse(speed == "quick_justin_score", "Justin", "Nate") # Relabel speed column
   )  %>%
-  select(Participant_ID, condition, person, score) # Keep only essential columns
+  select(Participant_ID, condition, speed, score) # Keep only essential columns
 
 
 # View the reshaped data
@@ -409,7 +468,7 @@ head(character_eval_group3_long)
 ### Step 4: Run Repeated-Measures ANOVA
 
 ```{r}
-anova_group3 <- aov(score ~ condition * person + Error(Participant_ID/person), data = character_eval_group3_long)
+anova_group3 <- aov(score ~ condition * speed + Error(Participant_ID/speed), data = character_eval_group3_long)
 
 # View the summary
 summary(anova_group3)
@@ -419,7 +478,7 @@ summary(anova_group3)
 
 ```{r}
 # Conduct post hoc pairwise comparisons using estimated marginal means
-posthoc_group3_results <- emmeans(anova_group3, pairwise ~ condition * person)
+posthoc_group3_results <- emmeans(anova_group3, pairwise ~ condition * speed)
 
 print(posthoc_group3_results)
 
@@ -429,7 +488,7 @@ print(posthoc_group3_results)
 ```{r}
 # Refit the repeated measures model
 anova_group3_lmer <- lmer(
-  score ~ condition * person + (1 | Participant_ID),
+  score ~ condition * speed + (1 | Participant_ID),
   data = character_eval_group3_long
 )
 
@@ -447,7 +506,7 @@ print(eta2_group3)
 ```{r}
 
 # Updated plot with detailed y-axis tweaks
-ggplot(character_eval_group3_long, aes(x = person, y = score, fill = person)) +
+ggplot(character_eval_group3_long, aes(x = speed, y = score, fill = speed)) +
   geom_bar(
     stat = "summary",
     fun = "mean",
@@ -487,3 +546,62 @@ ggplot(character_eval_group3_long, aes(x = person, y = score, fill = person)) +
 
 
 ```
+
+```{r}
+
+# Step 1: Summarize the data to get means for each speed and condition
+line_data <- character_eval_group3_long %>%
+  group_by(speed, condition) %>%
+  summarize(mean_score = mean(score), .groups = "drop")
+
+# Step 2: Plot with connecting lines and tweaks
+ggplot(character_eval_group3_long, aes(x = condition, y = score, fill = speed)) +
+  # Bar plot for the data
+  geom_bar(
+    stat = "summary",
+    fun = "mean",
+    position = position_dodge(width = 0.8),  # Columns closer together
+    width = 0.6                             # Narrower columns
+  ) +
+  # Add lines connecting the means
+  geom_line(
+    data = line_data,
+    aes(x = as.numeric(as.factor(condition)) + ifelse(speed == "Justin", -0.2, 0.2), 
+        y = mean_score, group = speed),
+    size = 1.3,  # Line thickness
+    color = "darkblue"
+  ) +
+  # Add dots at the ends of the lines, centered with the bars
+  geom_point(
+    data = line_data,
+    aes(x = as.numeric(as.factor(condition)) + ifelse(speed == "Justin", -0.2, 0.2), 
+        y = mean_score),
+    size = 3,
+    color = "darkblue"
+  ) +
+  labs(
+    title = "Moral Character Evaluations (Group 3 Data)",
+    x = "Condition",
+    y = "Mean Score (Likert Scale)",  # Y-axis label with clarification
+    fill = "Decision Speed"
+  ) +
+  scale_fill_manual(
+    values = c("Justin" = "#4F81BD", "Nate" = "#9DC3E6"),  # Keep column colors the same
+    labels = c("Justin" = "Quick (Justin)", "Nate" = "Slow (Nate)")  # Custom legend labels
+  ) +
+  theme_minimal() +
+  theme(
+    text = element_text(size = 12),
+    plot.title = element_text(hjust = 0.5, face = "bold", size = 14),  # Centered title
+    axis.text.x = element_text(size = 10),
+    axis.title.y = element_text(margin = margin(r = 15)),  # Add spacing to y-axis label
+    legend.position = "none"  # Remove the legend for speed (lines)
+  ) +
+  scale_y_continuous(
+    limits = c(0, 7),  # Y-axis limits for Likert scale
+    breaks = 1:7,      # Label y-axis by 1's
+    expand = c(0, 0)   # No extra space above/below
+  )
+
+```
+
